hide search on mobile - its buggy

--- a/src/pages/faq/index.module.scss
+++ b/src/pages/faq/index.module.scss
@@ -24,6 +24,7 @@
   margin: 36px 0;
   padding-bottom: 24px;
   border-bottom: 1px solid $wickedWhite;
+  display: none;
 }
 
 .Question {
@@ -36,5 +37,11 @@
 
   p {
     margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .SearchWrapper {
+    display: block;
   }
 }
